<resources>
    <string name="tab">\u0009\u0009\u0009\u0009</string>
    <string name="app_name">게임이론</string>
    <string name="action_settings">Settings</string>
    <string name="login">로그인</string>
    <string name="et_password_hint">비밀번호 입력</string>
    <string name="et_email_hint">이메일 주소 입력</string>
    <string name="et_name_hint">이름 입력</string>
    <string name="login_email">이메일로 로그인</string>
    <string name="signup">회원가입</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">플레이어</string>
    <string name="profile">프로필</string>
    <string name="game_info">게임정보</string>
    <string name="player_name">플레이어 이름</string>
    <string name="special_note">특이사항</string>
    <string name="status">탈락여부</string>
    <string name="default_value_none">없음</string>
    <string name="default_value_status">생존</string>
    <string name="detail">상세정보</string>
    <string name="close">닫기</string>
    <string name="manager">관리자</string>
    <string name="default_value_chat">말풍선 내용</string>
    <string name="hint_message">메세지를 입력하세요</string>
    <string name="send">전송</string>
    <string name="btn_message">메세지 보기</string>
    <string name="read_rule_book">룰북 보기</string>
    <string name="current_game">현재 게임: </string>

    <string name="game_title">게임 타이틀</string>
    <string name="game_rule_subtitle_1">룰 소제목 1</string>
    <string name="game_rule_subtitle_2">룰 소제목 2</string>
    <string name="game_rule_subtitle_3">룰 소제목 3</string>
    <string name="game_rule_content_1">게임 설명 1</string>
    <string name="game_rule_content_2">게임 설명 2</string>
    <string name="game_rule_content_3">게임 설명 3</string>

    <string name="logout">로그아웃</string>
    <string name="failed_value_status">탈락</string>
    <string name="tv_timer_text">제한시간</string>
    <string name="game_change">게임변경</string>
    <string name="btn_apply">수정하기</string>
    <string name="fail_value_status">탈락</string>
    <string name="turn_daytime">낮</string>
    <string name="turn_night">밤</string>
    <string name="check_vote">투표 확인</string>
    <string name="start_turn_daytime">낯 시작</string>
    <string name="btn_vote">투표하기</string>
    <string name="turn_auction">경매중</string>
    <string name="check_rank">실시간 랭킹</string>
    <string name="auction_start">경매 시작</string>
    <string name="trade_book">거래 장부</string>
    <string name="auction_play">경매 진행</string>
    <string name="btn_bid">입찰</string>
    <string name="edit_bid_hint">입찰가를 입력해주세요</string>
    <string name="current_bid">현재 입찰가</string>
    <string name="current_bidder">현재 입찰자</string>
    <string name="notice">공지사항</string>
    <string name="game">게임</string>
    <string name="default_time_value">00:00</string>
    <string name="subtitle">소제목</string>
    <string name="time">시간</string>
    <string name="show_dead">사망 플레이어 보기</string>
    <string name="show_alive">생존 플레이어 보기</string>
</resources>
