<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMafiaManageFragment"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_auction"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_turn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_rule_book"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/read_rule_book"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_trade_book"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/trade_book"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_check_rank"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/check_rank"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_set_turn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/auction_start"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/logout"
        android:textSize="18sp"/>

</LinearLayout>