<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".SetPlayerActivity">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_player_default"/>
    <Button
        android:id="@+id/btn_set_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/iv_profile"
        android:layout_alignEnd="@+id/iv_profile"
        android:background="@drawable/ic_edit_default"
        android:onClick="changeProfileImage"/>

    <TextView
        android:id="@+id/et_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/player_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_special_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_player_name"
        android:layout_marginTop="30dp"
        android:text="@string/special_note"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_special_note_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_special_note"
        android:layout_alignBottom="@+id/tv_special_note"
        android:layout_toEndOf="@+id/tv_special_note"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_setting"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_special_note"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_status_value_1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_status"
        android:layout_alignBottom="@+id/tv_status"
        android:layout_toEndOf="@+id/tv_status"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_select"
        android:text="@string/default_value_status"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/btn_status_value_2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_status"
        android:layout_alignBottom="@+id/tv_status"
        android:layout_toEndOf="@+id/btn_status_value_1"
        android:background="@drawable/btn_select"
        android:text="@string/fail_value_status"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_apply"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="changeProfileInfo"/>

</RelativeLayout>