<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_main_scene"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/rl_tab_top"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="88dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/player"
            android:textSize="20dp"
            android:textColor="@color/point_on"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="160dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:background="@drawable/bg_timer_txt"
            android:text="@string/subtitle"
            android:textSize="16dp"
            android:textColor="@color/white"
            />

        <Switch
            android:id="@+id/switch_status"
            android:layout_width="100dp"
            android:switchMinWidth="100dp"
            android:layout_height="16dp"
            android:layout_below="@+id/tv_subtitle"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"/>
        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:background="@drawable/bg_view"
            android:layout_below="@+id/tv_subtitle"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/ib_menu"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignTop="@+id/tv_title"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/icon_menu"
            android:background="@color/transparent"/>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_tab_top"
        android:layout_above="@+id/rl_tab_bottom" />

    <RelativeLayout
        android:id="@+id/rl_tab_bottom"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="6dp"
        android:paddingBottom="2dp"
        android:background="@drawable/bg_tab_bottom">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/tab_profile"
                android:src="@drawable/icon_player"
                android:text="@string/player"
                style="@style/btn_tab_bottom" />
            <ImageButton
                android:id="@+id/tab_notice"
                android:src="@drawable/icon_notice"
                android:text="@string/notice"
                style="@style/btn_tab_bottom"/>
            <ImageButton
                android:id="@+id/tab_game"
                android:src="@drawable/icon_game"
                android:text="@string/game"
                style="@style/btn_tab_bottom"/>
            <ImageButton
                android:id="@+id/tab_message"
                android:src="@drawable/icon_message"
                android:text="@string/manager"
                style="@style/btn_tab_bottom"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-22dp"
        android:paddingStart="10dp"
        android:background="@drawable/bg_timer_txt"
        android:alpha="0.67"
        android:gravity="center_vertical"
        android:text="@string/default_time_value"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:theme="@android:style/Theme.Translucent"/>

</RelativeLayout>