<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerActivity">

    <RelativeLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_tab" />

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tab_player"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49.5"
            android:background="@color/lightgray"
            android:text="@string/player"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"/>
        <Button
            android:id="@+id/tab_game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49.5"
            android:background="@color/lightgray"
            android:text="@string/game_info"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"/>
        <Button
            android:id="@+id/tab_game_change"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49.5"
            android:background="@color/lightgray"
            android:text="@string/game_change"/>
    </LinearLayout>
</RelativeLayout>