<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameManageFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_current_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_game"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_current_game_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_rule_book"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/read_rule_book"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_check_timer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="타이머 확인"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_set_timer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="타이머 설정"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/logout"
        android:textSize="18sp"/>

</LinearLayout>